close button for side panel

--- a/front_end/chatbot.html
+++ b/front_end/chatbot.html
@@ -11,7 +11,10 @@
 
 <body>
   <div class="main-container">
-    <div class="side-panel">
+    <div class="side-panel" id="side-panel">
+      <div class="close-button" id="close-button">
+        <i class="far fa-window-close"></i>
+      </div>
       <div class="user-profile">
         <i class="fa-solid fa-circle-user"></i>
         <h3>wazaa</h3>
