--- a/front_end/chatbot.html
+++ b/front_end/chatbot.html
@@ -12,9 +12,9 @@
 <body>
   <div class="main-container">
     <div class="side-panel" id="side-panel">
-      <div class="close-button" id="close-button">
-        <i class="far fa-window-close"></i>
-      </div>
+      <div id="side-panel-button" class="side-panel-button" title="Toggle Side Panel">
+        <i id="toggle-icon" class="fa-solid fa-bars"></i>
+    </div>    
       <div class="user-profile">
         <i class="fa-solid fa-circle-user"></i>
         <h3>wazaa</h3>
@@ -41,7 +41,7 @@
         <h2>wazaa</h2>
         <div class="dropdown">
           <div id="menu" class="menu-icon">
-              <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-ellipsis-vertical"></i>
           </div>
           <div class="dropdown-content" id="dropdown-content">
               <a href="#" id="clear-chat"><i class="fa-solid fa-broom"></i>Clear Chat</a>
